--- a/cluster/apps/home/esphome/helm-release.yaml
+++ b/cluster/apps/home/esphome/helm-release.yaml
@@ -22,6 +22,10 @@ spec:
     defaultPodOptions:
       nodeSelector:
         kubernetes.io/hostname: rpi4-poe-3
+      tolerations:
+        - key: "low-memory"
+          operator: "Exists"
+          effect: "NoSchedule"
       dnsConfig:
         options:
           - name: ndots
