--- a/cluster/apps/home/zigbee2mqtt/helm-release.yaml
+++ b/cluster/apps/home/zigbee2mqtt/helm-release.yaml
@@ -20,6 +20,11 @@ spec:
       namespace: home
   values:
     # yaml-language-server: $schema=https://raw.githubusercontent.com/bjw-s/helm-charts/main/charts/library/common/values.schema.json
+    defaultPodOptions:
+      tolerations:
+        - key: "low-memory"
+          operator: "Exists"
+          effect: "NoSchedule"
     controllers:
       main:
         containers:
