--- a/cluster/core/networking/kustomization.yaml
+++ b/cluster/core/networking/kustomization.yaml
@@ -4,7 +4,7 @@ kind: Kustomization
 resources:
   - cert-manager
   - cloudflare-ingress
-  - external-dns
+  # - external-dns
   - metallb
   # - multus
   # - nginx-ingress-external
