--- a/cluster/base/flux-system/charts/helm/postgres-operator-ui-charts.yaml
+++ b/cluster/base/flux-system/charts/helm/postgres-operator-ui-charts.yaml
@@ -2,9 +2,9 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
-  name: banzaicloud-charts
+  name: postgres-operator-ui-charts
   namespace: flux-system
 spec:
   interval: 15m
-  url: https://kubernetes-charts.banzaicloud.com
+  url: https://opensource.zalando.com/postgres-operator/charts/postgres-operator-ui
   timeout: 3m
