databases: reorganize and deploy mongodb operator

--- a/cluster/base/flux-system/charts/helm/kustomization.yaml
+++ b/cluster/base/flux-system/charts/helm/kustomization.yaml
@@ -41,6 +41,7 @@ resources:
   - minecraft-charts.yaml
   - minio-charts.yaml
   - mlohr-charts.yaml
+  - mongodb-community-charts.yaml
   - next-cloud-charts.yaml
   - nvidia-charts.yaml
   - nvdp-charts.yaml
