--- a/cluster/base/cluster-secrets.sops.yaml
+++ b/cluster/base/cluster-secrets.sops.yaml
@@ -28,7 +28,7 @@ stringData:
     MEDIA_PAPERLESS_SECRET_KEY: ENC[AES256_GCM,data:3wQ/Vzek3dF52wrDnCLiOA==,iv:N5NKno2c4p0Su0soTqkfr3TOz4yFQN00fllw0MUMAvY=,tag:i0wuWWsddPyITTuf6Vtl7A==,type:str]
     MEDIA_PAPERLESS_SMB_USERS: ENC[AES256_GCM,data:NPaTppQrwXvWMNKcAjLhvP1lXain8LdTD665EdVfsjHBKVs=,iv:GoI2GHHfYYCpVccCENPVf8c/e6kdm5xIf+j6rkySzGs=,tag:1cIVYeyydYVDeGy3soxa1A==,type:str]
     #ENC[AES256_GCM,data:juiziOPL8sXl20I=,iv:fG9D6GGivjNjuOoDblbQsZhpxbBCqcOZtvbxJsHPn8g=,tag:jjLlI/DcojnZLsjGqCjhMA==,type:comment]
-    NETWORKING_UNIFI_MONGODB_USER: ENC[AES256_GCM,data:AXUYVg==,iv:hyI1tqUHCFpPCxsER09vFu0JQQ8+wavYge2X9BRJHTI=,tag:sQ/SQafVqfmCKrHrr/HJ5Q==,type:str]
+    NETWORKING_UNIFI_MONGODB_USER: ENC[AES256_GCM,data:/Q24yFE=,iv:2YazEHcNiWDYLvRUkXpfdaIsIKjihZhofddx4VgKt7U=,tag:0Je6uzOorEU+u65zHOyHnw==,type:str]
     NETWORKING_UNIFI_MONGODB_PASS: ENC[AES256_GCM,data:M4cadphM8gVNkWtUGvYSeg==,iv:svPHEb+MsA+1aCKHxFBR8m7ND5/sy4mbK1kHZGFwUu4=,tag:U9MMPXJpk0XSGE4CgPl7Sg==,type:str]
     NETWORKING_UNIFI_MONGODB_DB: ENC[AES256_GCM,data:y0pZ790=,iv:eTOmaIjr3fuo+4fJUPvjKIEiK9Rkn15/P4T5q0A8dbo=,tag:TPTaOatTUqBrBGI3Pn2aIA==,type:str]
     #ENC[AES256_GCM,data:VNpRjE/d,iv:UdLSQY40OT0D2wzb7ghMZXXQBuwB3CcnfhiXqEzvQJs=,tag:u2Iz3ZW67L7bo+L+xLNyWQ==,type:comment]
@@ -39,10 +39,6 @@ stringData:
     TOOLS_SHLINK_DB_DB: ENC[AES256_GCM,data:24BtXgRq,iv:X20sc5hScyuLRb6s8GyR+/Kh67HKav7ZTRU48DBkj6A=,tag:9fAkhhGAxzWBTPzQOAgYVg==,type:str]
     TOOLS_SHLINK_GEOIP_LICENSE: ENC[AES256_GCM,data:bwel61K0VTrffQAuDF75+5t6Nyn1A+JRLW4/L9bMdsijbUP31uyipQ==,iv:zkvI7lCHmxGyhhAdIO5w9CO+H2dM/Fm1FfQccessCOw=,tag:1iEAmWYB+KE0/30HjIC92w==,type:str]
 sops:
-    kms: []
-    gcp_kms: []
-    azure_kv: []
-    hc_vault: []
     age:
         - recipient: age1rhy2neq0qg7y6svfu2pcyd85z3wkgspkgzz4jcmguypymk3e958qzhgwqx
           enc: |
@@ -53,8 +49,7 @@ sops:
             eEFSeGV3NHVBV0JXSnozbHpUaEtIbVUK6kmKX20QI1xvPOluAwA52XRqYrLB/k88
             wl6PHYbwI2EKrqXzWUtPkILBUORr1i+2NaFOO6cvnI5lWSMvnc/YNw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-04-23T23:19:04Z"
-    mac: ENC[AES256_GCM,data:aRv0D0sTyNZx/9yUsru5XADjfzei1oM1sbf71+F4k+Wfa9eqnnDrmGWa5VIy4eUjWPatzAnXXOxoxOlN26ibbLBI23NIexsKab2lkWe2qaPFWi+p8MI/kBX5qyASW2yFVnJ5E61St+68PYTIBR8Tw9QHsL7p0YCjcAntFWYJkeQ=,iv:SRs4ejiDVARwtg+c4k10SJJVaiCh6/C53OYxvWPGdrc=,tag:xLLkDSVplaSBRNb7YuFqxQ==,type:str]
-    pgp: []
+    lastmodified: "2025-10-06T18:50:31Z"
+    mac: ENC[AES256_GCM,data:k0Ub/thxgx/Xkl9TXFuhrXfFqCtIfRnuX8g6YslJCcEFXnoBtzH/XByazFJg1wmuj0nKQEt4ikt7zYkFr1jz08A84q7fLXRKvicnb//59Txurv3Mb3tF6HkXR5UP0+U9ZHwx9W3afw03WgCmftGw6W8d26OqApXtkJY6W8sXU7Q=,iv:+iTkA0I47P8wc9rgPFbv9ameZRNKhqEMZU970nkontg=,tag:10VOQMght/MrkH/40s3y6g==,type:str]
     encrypted_regex: ((?i)(Pass|pass|secret($|[^N])|key|token|^data$|^stringData))
-    version: 3.9.0
+    version: 3.10.2
