--- a/cluster/crds/mariadb-operator/kustomization.yaml
+++ b/cluster/crds/mariadb-operator/kustomization.yaml
@@ -1,7 +1,4 @@
----
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - mariadb
-  # - mongodb
-  - postgresql
+  - helm-release.yaml
