--- a/ansible.cfg
+++ b/ansible.cfg
@@ -6,8 +6,8 @@ forks                       = 32
 module_name                 = command
 deprecation_warnings        = True
 executable                  = /bin/bash
-stdout_callback             = yaml
-ansible_python_interpreter  = auto_silent
+result_format               = yaml
+interpreter_python          = auto_silent
 
 #--- Files/Directory settings
 log_path                = ~/ansible.log
@@ -16,7 +16,6 @@ library                 = /usr/share/my_modules
 remote_tmp              = /tmp/.ansible/tmp
 local_tmp               = /tmp/.ansible/tmp
 roles_path              = ./provision/ansible/roles
-collections_paths       = provision/ansible/.dependencies
 retry_files_enabled     = False
 
 #--- Fact Caching settings
