hajimari: mikrotik switch name mispelling correction

--- a/cluster/apps/tools/hajimari/helm-release.yaml
+++ b/cluster/apps/tools/hajimari/helm-release.yaml
@@ -66,7 +66,7 @@ spec:
             - name: Gitlab
               url: https://gitlab.iwrite.software
               icon: "gitlab"
-            - name: MicroTik Switch
+            - name: MikroTik Switch
               url: http://mikrotik-switch.sparks.codes
               icon: "remote-desktop"
             - name: Lambda iDRAC
