metube: put videos in folders when downloading single file

--- a/cluster/apps/media/metube/helm-release.yaml
+++ b/cluster/apps/media/metube/helm-release.yaml
@@ -25,6 +25,7 @@ spec:
               tag: "2025-04-16"
             env:
               TZ: "America/Chicago"
+              OUTPUT_TEMPLATE: "%(channel)s/%(title)s.%(ext)s"
     service:
       main:
         controller: main
