--- a/cluster/apps/tools/kustomization.yaml
+++ b/cluster/apps/tools/kustomization.yaml
@@ -2,7 +2,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - bambu-studio
+  # - bambu-studio
   - littlelink
   - mailserver
   - n8n
@@ -14,4 +14,4 @@ resources:
   - hajimari
   # - homebox
   - shlink
-  - uptime-kuma
+  # - uptime-kuma
