--- a/cluster/crds/metallb/kustomization.yaml
+++ b/cluster/crds/metallb/kustomization.yaml
@@ -1,10 +1,4 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - addresspool.yaml
-  - bfdprofile.yaml
-  - bgpadvertisement.yaml
-  - bgppeer.yaml
-  - community.yaml
-  - ipaddresspool.yaml
-  - l2advertisement.yaml
+  - crds.yaml
