provision: ansible config updates - change log location

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -10,7 +10,7 @@ result_format               = yaml
 interpreter_python          = auto_silent
 
 #--- Files/Directory settings
-log_path                = ~/ansible.log
+log_path                = /tmp/ansible.log
 inventory               = ./provision/ansible/inventory
 library                 = /usr/share/my_modules
 remote_tmp              = /tmp/.ansible/tmp
