--- a/cluster/apps/media/ghost/helm-release-ghost-mariadb.yaml
+++ b/cluster/apps/media/ghost/helm-release-ghost-mariadb.yaml
@@ -1,26 +1,47 @@
 ---
-apiVersion: helm.toolkit.fluxcd.io/v2
-kind: HelmRelease
+apiVersion: k8s.mariadb.com/v1alpha1
+kind: MariaDB
 metadata:
-  name: ghost-mariadb
+  name: mariadb
   namespace: media
 spec:
-  interval: 15m
-  chart:
-    spec:
-      chart: mariadb
-      version: 22.0.0
-      sourceRef:
-        kind: HelmRepository
-        name: bitnami-charts-oci
-        namespace: flux-system
-      interval: 15m
-  values:
-    auth:
-      # database__connection__host: ghost-mariadb
-      rootPassword: ${MEDIA_GHOST_DB_ROOT_PASSWORD}
-      username: ${MEDIA_GHOST_DB_USER}
-      password: ${MEDIA_GHOST_DB_PASSWORD}
-      database: ${MEDIA_GHOST_DB_DB}
-    persistence:
-      existingClaim: ghost-db-pvc
+  database: $MEDIA_GHOST_DB_DB
+
+  username: $MEDIA_GHOST_DB_USER
+
+  passwordSecretKeyRef:
+    name: ghost-secret
+    key: GHOST_DB_PASSWORD
+    generate: false
+
+  rootPasswordSecretKeyRef:
+    name: ghost-secret
+    key: GHOST_DB_ROOT_PASSWORD
+    generate: false
+
+  replicas: 1
+
+  port: 3306
+
+  storage:
+    size: 15Gi
+    storageClassName: ceph-block
+
+  myCnf: |
+    [mariadb]
+    bind-address=*
+    default_storage_engine=InnoDB
+    binlog_format=row
+    innodb_autoinc_lock_mode=2
+    innodb_buffer_pool_size=800M
+    max_allowed_packet=256M
+
+  resources:
+    requests:
+      cpu: 500m
+      memory: 1Gi
+    limits:
+      memory: 1Gi
+
+  metrics:
+    enabled: true
