--- a/cluster/apps/media/ghost/helm-release-ghost-mariadb.yaml
+++ b/cluster/apps/media/ghost/helm-release-ghost-mariadb.yaml
@@ -2,7 +2,7 @@
 apiVersion: k8s.mariadb.com/v1alpha1
 kind: MariaDB
 metadata:
-  name: mariadb
+  name: ghost-mariadb
   namespace: media
 spec:
   database: $MEDIA_GHOST_DB_DB
