--- a/cluster/apps/tools/shlink/helm-release-shlink-mariadb.yaml
+++ b/cluster/apps/tools/shlink/helm-release-shlink-mariadb.yaml
@@ -1,27 +1,47 @@
 ---
-apiVersion: helm.toolkit.fluxcd.io/v2
-kind: HelmRelease
+apiVersion: k8s.mariadb.com/v1alpha1
+kind: MariaDB
 metadata:
   name: shlink-mariadb
   namespace: tools
 spec:
-  interval: 15m
-  chart:
-    spec:
-      chart: mariadb
-      version: 22.0.0
-      sourceRef:
-        kind: HelmRepository
-        name: bitnami-charts-oci
-        namespace: flux-system
-      interval: 15m
-  values:
-    auth:
-      rootPassword: ${TOOLS_SHLINK_DB_ROOT_PASSWORD}
-      username: ${TOOLS_SHLINK_DB_USER}
-      password: ${TOOLS_SHLINK_DB_PASSWORD}
-      database: ${TOOLS_SHLINK_DB_DB}
-    primary:
-      persistence:
-        enabled: true
-        existingClaim: shlink-db-pvc
+  database: $TOOLS_SHLINK_DB_DB
+
+  username: $TOOLS_SHLINK_DB_USER
+
+  passwordSecretKeyRef:
+    name: shlink-secret
+    key: SHLINK_DB_PASSWORD
+    generate: false
+
+  rootPasswordSecretKeyRef:
+    name: shlink-secret
+    key: SHLINK_DB_ROOT_PASSWORD
+    generate: false
+
+  replicas: 1
+
+  port: 3306
+
+  storage:
+    size: 7Gi
+    storageClassName: ceph-block
+
+  myCnf: |
+    [mariadb]
+    bind-address=*
+    default_storage_engine=InnoDB
+    binlog_format=row
+    innodb_autoinc_lock_mode=2
+    innodb_buffer_pool_size=800M
+    max_allowed_packet=256M
+
+  resources:
+    requests:
+      cpu: 500m
+      memory: 1Gi
+    limits:
+      memory: 1Gi
+
+  metrics:
+    enabled: true
