shlink: use correct secret

--- a/cluster/apps/tools/shlink/secret.sops.yaml
+++ b/cluster/apps/tools/shlink/secret.sops.yaml
@@ -4,8 +4,8 @@ stringData:
     SHLINK_DB_PASSWORD: ENC[AES256_GCM,data:FgQXFXKPerXHfIhlZ1OQIw==,iv:xFGChn7gjCpbiVJpx79ZovHIIeDdBXD7O1i5GRIOcMc=,tag:jCsn5DsLT8uq+/lqx+vBxg==,type:str]
 kind: Secret
 metadata:
-    name: ghost-secret
-    namespace: media
+    name: shlink-secret
+    namespace: tools
 sops:
     age:
         - recipient: age1rhy2neq0qg7y6svfu2pcyd85z3wkgspkgzz4jcmguypymk3e958qzhgwqx
@@ -17,7 +17,7 @@ sops:
             NlFzQXdwbTVkdzlqYWV1MXBZSmRqdWcKKyueXsHUP32fhtXBGuFB/buLRCMPPYOO
             epnhbfo7p1DeE6Dnfli3SG5H2IK7heR6n8LJvaaQ+t8s1lXxVNs6cA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-10-26T17:10:52Z"
-    mac: ENC[AES256_GCM,data:NDdUSi+k6ZZx21EaDXKEtWV7dYanhwB0jSleMG0kqwV2ptZcDxajbx7Z5Gfwi+RvpP5rpqg5rC0hcf8zPgCUhF8ZoS2h34Bg1UROK5o8eQSV6F9pDYrdW0SA1m9Tg8RBZVOEKefAmR7vOFdeFLVBRIIA7GMX5Hm7o5rCpesP/xA=,iv:9rX/YPenlRYpd/+qGfEjkRdR9w0rjbtVmVGIcR4wMmk=,tag:8h1mca1vgMYfNCYr0b6J3A==,type:str]
+    lastmodified: "2025-10-26T17:13:40Z"
+    mac: ENC[AES256_GCM,data:Fm+5qqBTMZ89KNXBa7vRpF6KQN248OmL6kZQM8r5mAiKpgHxo+CFJn/KBMu1Is74K3l06DnfMgxaU0L26807m0qihBihw9D5wUedfIP0RCZMS5/oYvnrHl8MNt4AUFyn8SzTEuslrfhOqtwKQ8tt2zVI0NiE4EshJbFiMOmbaFo=,iv:bFhPrbWOWN8b77neTzhgNIe4WVnzO7BkYsNzZZ4CMKg=,tag:I6Uc/Z0c4BHE9G+jzfBBQA==,type:str]
     encrypted_regex: ^(data|stringData)$
     version: 3.11.0
