wip: temp changes

--- a/cluster/apps/media/immich/kustomization.yaml
+++ b/cluster/apps/media/immich/kustomization.yaml
@@ -1,5 +1,6 @@
+---
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - kusts.yaml
-  - local-path-provisioner
+  - helm-release.yaml
+  # - pvc.yaml
