--- a/cluster/core/storage/local-path-provisioner/kustomization.yaml
+++ b/cluster/core/storage/local-path-provisioner/kustomization.yaml
@@ -1,5 +1,4 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - kusts.yaml
-  - local-path-provisioner
+  - local-path-storage.yaml
